@@ -221,6 +221,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5853) Update for Portuguese messages (pt)
 * (bug 5851) Use Cyrillic for Kirghiz language name
 * (bug 5841) Allow the 'EditFilter' hook to return a non-fatal error message
+* (bug 5846) Link to individual group description pages in Special:Listusers
 
 == Compatibility ==
 
